--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hanywyam.github.io/catList",
+  "homepage": "https://hanywyam.github.io/catList/",
   "name": "231116",
   "version": "0.1.0",
   "private": true,
